objects/TT_Feature_Flag__mdt/TT_Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <label>TT_Feature_Flag</label>
    <pluralLabel>TT_Feature_Flags</pluralLabel>
</CustomObject>