objects/TT_Feature_Flag__mdt/fields/Additional_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Additional_Parameter__c</fullName>
    <label>Additional Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>