objects/TT_Feature_Flag__mdt/fields/SF_Flag__c.field-meta.xml
<CustomField>
    <fullName>SF_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SF Flag</label>
    <type>Checkbox</type>
</CustomField>