objects/TT_Feature_Flag__mdt/fields/ShowClientTagging__c.field-meta.xml
<CustomField>
    <fullName>ShowClientTagging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Client Tagging</label>
    <type>Checkbox</type>
</CustomField>