objects/TT_Feature_Flag__mdt/fields/ShowFinestLogs__c.field-meta.xml
<CustomField>
    <fullName>ShowFinestLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowFinestLogs (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>