objects/TT_Feature_Flag__mdt/fields/TT_Flag__c.field-meta.xml
<CustomField>
    <fullName>TT_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TT Flag</label>
    <type>Checkbox</type>
</CustomField>